fix nowrap in schedule meeting

--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,7 @@ body {
   color: #fff;
   padding: 1.5rem 2.5rem;
   background-color: #f26822;
+  white-space: nowrap;
 }
 
 .btn:link,
